# PermutationsSorting

./: Cargo.toml  GAPS_ANALYSIS.md  STATE_OF_THE_ART.md  Transpositions_V7.3 (Parallellization).md
src/: main.rs  permutation_label.rs  todo.txt
src/permutation/: adjacency_calculator.rs  constants.rs  distance_calculator.rs  mod.rs  permutation_helper.rs  permutation_label.rs  permutations_generator.rs  precompute.rs  pure_permutations_generator.rs
src/permutation/distance_calculator/: distance_calculator.rs  distance_calculator_mem_efficient.rs  mod.rs
