[package]
name = "PermutationsSortingByTranspositions"
version = "0.1.0"
authors = ["Priyanshu Das <das.priyanshu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permutohedron = "0.2.4"
text_io = "0.1.7"
rayon = "1.1"
lehmer = "3.0.0"
rand = "0.7.2"